package typing.model.constant;


public enum WordType {
	EASY_WORD,
	MEDIUM_WORD,
	HARD_WORD,
	EXTENDED_WORD,
	CODE_WORD,
	PUNCTUATION_WORD;


}
