package typing.word.stash;

public class CodeStash extends Stash{
	public CodeStash(){
		super("code_words_1500.txt");
	}
}
