package typing.word.stash;


public class EasyStash extends Stash {
	public EasyStash(){
		super("easy_words.txt");
	}
}
