package typing.word.stash;


public class ExtendedStash extends Stash {
	public ExtendedStash(){
		super("extended_words_1500.txt");
	}
}
