package typing.word.stash;


public class HardStash extends Stash {
	public HardStash(){
		super("hard_words_7_plus.txt");
	}
}
