package typing.word.stash;


public class MediumStash extends Stash{
	public MediumStash(){
		super("medium_words_4_6.txt");
	}
}
