package typing.word.stash;

public class PunctuationStash extends Stash{
	public PunctuationStash(){
		super("punctuation_words_1500.txt");
	}
}
